# VIT5.1

./: .gitattributes  .replit  pyproject.toml  replit.md
vit-sports-intelligence/: .env.example  .gitignore  GAP_ANALYSIS.md  README.md  main.py  requirements.txt  test-browser-fetch.mjs  test-frontend-complete.mjs  test-frontend-fetch.mjs
vit-sports-intelligence/alembic/: env.py
vit-sports-intelligence/alembic/versions/: 002_add_idempotency_constraint.py  fab045ad4db1_add_ai_meta_layer_tables.py
vit-sports-intelligence/app/: __init__.py  config.py
vit-sports-intelligence/app/core/: __init__.py  dependencies.py
vit-sports-intelligence/app/db/: database.py  models.py  repositories.py
vit-sports-intelligence/app/schemas/: schemas.py
vit-sports-intelligence/app/services/: ai_ingestion.py  ai_profiler.py  ai_signals.py  alerts.py  claude_insights.py  clv_tracker.py  gemini_insights.py  grok_insights.py  insight_store.py  live_ai_feed.py  market_utils.py  multi_ai_dispatcher.py  odds_api.py  results_settler.py
vit-sports-intelligence/colab/: train_real_match_models.py
vit-sports-intelligence/data/: training_metrics.json
vit-sports-intelligence/data/insights/: match_2.json  match_8.json
vit-sports-intelligence/frontend/: FRONTEND_ENHANCEMENT_README.md  INTEGRATION_CHECKLIST.md  INTEGRATION_GUIDE.md  INTEGRATION_ROADMAP.md  INTEGRATION_SNIPPETS.md  QUICK_START.txt  README_INTEGRATION.md  test-fetch.js  vite.config.js
vit-sports-intelligence/frontend/src/: App.css  (+14 more)
vit-sports-intelligence/scripts/: start_backend.sh  start_frontend.sh  start_fullstack.sh
(+23 files in other folders)
